--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                 </p>
                                 <div class="gap-2 d-sm-flex justify-content-sm-center">
                                     <button type="button" class="btn btn-primary btn-lg mt-3">
-                                       <a href="#contact">Contact Me</a> 
+                                       <a href="https://drive.google.com/file/d/1isGAKucvbW8ILFm9Fp4T_mgEAQu-xjFf/view?usp=sharing">View CV</a> 
                                     </button>
                                 </div>
                             </div>
@@ -410,7 +410,7 @@
                                             interactive web interface for ease of use. This project aims to make
                                             document categorization and analysis more accessible, especially for NLP,
                                             document management, and data exploration tasks.</p>
-                                        <a href="https://github.com/PriscilliaCandra/document-clustering-nlp"
+                                        <a href="https://github.com/PriscilliaCandra/document_clustering_nlp"
                                             class="text-primary icon-link">View on GitHub</a>
                                     </div>
                                 </div>
