--- a/index.html
+++ b/index.html
@@ -121,7 +121,10 @@
                                 </p>
                                 <div class="gap-2 d-sm-flex justify-content-sm-center">
                                     <button type="button" class="btn btn-primary btn-lg mt-3">
-                                       <a href="https://drive.google.com/file/d/1isGAKucvbW8ILFm9Fp4T_mgEAQu-xjFf/view?usp=sharing">View CV</a> 
+                                       <a href="https://drive.google.com/file/d/1ynV_YYzEEgDH5Mif23BUHV0dYniF4d61/view?usp=sharing">View CV</a> 
+                                    </button>
+                                    <button type="button" class="btn btn-primary btn-lg mt-3">
+                                       <a href="https://drive.google.com/file/d/1VRnYJ3x9sVyEY8Ntb2yIuVlBrKGHgob-/view?usp=sharing">View Resume</a> 
                                     </button>
                                 </div>
                             </div>
