betulin bagian skills

--- a/index.html
+++ b/index.html
@@ -1471,31 +1471,31 @@
                         <div class="py-4 my-4">
                             <h2 class="fw-bold pb-4" data-aos="fade-up">My Skills</h2>
                             <div id="progressbar-tooltip-id" class="progressbar-tooltip">
-                                <div data-aos="fade-up">
+                                <div class="mb-5" data-aos="fade-up">
                                     <h4>Python</h4>
                                     <div class="progress-bar-wrap">
                                         <div class="ab-progress-bar" style="width: 95%"></div>
                                     </div>
                                 </div>
-                                <div data-aos="fade-up" data-aos-delay="100">
+                                <div class="mb-5" data-aos="fade-up" data-aos-delay="100">
                                     <h4>Laravel (PHP Framework)</h4>
                                     <div class="progress-bar-wrap">
                                         <div class="ab-progress-bar" style="width: 90%"></div>
                                     </div>
                                 </div>
-                                <div data-aos="fade-up" data-aos-delay="200">
+                                <div class="mb-5" data-aos="fade-up" data-aos-delay="200">
                                     <h4>SQL</h4>
                                     <div class="progress-bar-wrap">
                                         <div class="ab-progress-bar" style="width: 85%"></div>
                                     </div>
                                 </div>
-                                <div data-aos="fade-up" data-aos-delay="300">
+                                <div class="mb-5" data-aos="fade-up" data-aos-delay="300">
                                     <h4>Machine Learning & Deep Learning</h4>
                                     <div class="progress-bar-wrap">
                                         <div class="ab-progress-bar" style="width: 90%"></div>
                                     </div>
                                 </div>
-                                <div data-aos="fade-up" data-aos-delay="400">
+                                <div class="mb-5" data-aos="fade-up" data-aos-delay="400">
                                     <h4>Vue JS</h4>
                                     <div class="progress-bar-wrap">
                                         <div class="ab-progress-bar" style="width: 80%"></div>
